Refactored to my style. Now focusing on JUnit tests.